2004-12-11  Alp Toker  <alp@atoker.com>

	* cilc.cs:
	First stab at initialising delegates using method pointers.
	Convert the type registry management and reporting methods to use strings,
	making way for tie-in with native GObject hierarchies.
	Recursive conflict avoidance for the GObject class struct etc.
	Treat byref values properly.
	Support tie-in with existing GObject hierarchy.
	Use argc parity to decide the generation mode.
	Update usage help string.
	* res-Makefile:
	Use passed CFLAGS.
	Only rebuild modified targets if bundle is defined, not everything.
	* README:
	More usage examples.

2004-12-10  Alp Toker  <alp@atoker.com>

  * cilc.cs:
	The generated makefile now optionally uses mkbundle to include the assembly
	into the generated library (when 'bundle' is defined for make).
	The assembly is automatically copied into the generated directory.
	Use a resource for the static makefile
	If only one argument is given, generate sources to a temporary directory,
	build them (as bundle), and install them to the current directory.
	Otherwise, the old behaviour applies.
	Don't indent the __cplusplus ifdef block in generated headers.
	Include the Mono headers in the sources, not the headers.
	Identify and report disparity in the order of type registration.
	Start support for some more primitive types.
	Fix with/and separator logic in overloaded method generation.
	Generate enums.
	Cleanups.
	* README:
	Update with details of the new bundle feature and single-argument operation.
	* Makefile:
	We no longer need to copy the assembly to the generated directory manually.
	Include res-Makefile as a resource for cilc.exe
	* res-Makefile:
	The static makefile resource
	Tweak the library output directory.

2004-12-09  Alp Toker  <alp@atoker.com>

	* cilc.cs:
	Support inheritance (within a single namespace).
	Enhance CodeWriter.
	Handle nested namespaces properly.
	Generate forward type declarations.
	Use the real type, not MonoObject, for function parameters.